<resources>
    <string name="app_name">Nabi</string>
    <string name="text_done">확인</string>
    <string name="text_nickname_condition">* 한글, 영어 최대 14자 이내 작성\n* 공백 입력 불가능\n* 입력한 닉네임은 대화에 사용될 예정입니다</string>

    <!-- Home 화면 -->
    <string name="text_my_diary">나의 일기</string>
    <string name="text_add_diary">일기 쓰기</string>
    <string name="text_talk">대화하기</string>
    <string name="text_empty_diary">일기를 작성해주세요!</string>

    <string name="text_select_date">날짜 선택</string>

    <!-- 로그인 페이지 -->
    <string name="text_recent_login">최근에 이용했어요!</string>
    <string name="text_team_name">Team 너의비밀친구</string>

    <!-- 닉네임 설정 페이지 -->
    <string name="text_set_nickname">닉네임 설정</string>
    <string name="hint_set_nickname">닉네임을 입력해주세요</string>

    <!-- 달력 -->
    <string name="text_week_monday">M</string>
    <string name="text_week_tuesday">T</string>
    <string name="text_week_wednesday">W</string>
    <string name="text_week_thursday">T</string>
    <string name="text_week_friday">F</string>
    <string name="text_week_saturday">S</string>
    <string name="text_week_sunday">S</string>

    <!-- 일기 보기 - 일기 상세 페이지 -->
    <string name="text_modify">수정</string>
    <string name="text_delete">삭제</string>
    <string name="text_emotion_reload">일기 감정 분석하기</string>

    <!-- 일기 보기 - 일기 검색 페이지 -->
    <string name="hint_search_diary">검색어를 입력해주세요</string>

    <!-- 일기 보기 - 날짜 선택 페이지 -->
    <string name="text_move_statistics">내 감정 통계 보러가기</string>
    <string name="text_select_diary_title">일기 보기</string>

    <!-- 일기 작성 - 일기 작성 페이지 -->
    <string name="text_add_diary_hint">오늘은 어떤 일이 있었나요?</string>
    <string name="text_add_diary_save">저장</string>
    <string name="text_add_diary_emotion_loading">감정 분석 중</string>
    <string name="text_warning1">앱을 종료하면 문제가 생길 수 있습니다.</string>
    <string name="text_warning2">조금만 기다려주세요!</string>

    <!-- 일기 보기 - 감정 통계 페이지 -->
    <string name="text_emotion_statistic_title">감정 통계</string>
    <string name="text_select_cat">감정 고양이들을 선택해 해당 감정의 일기들을 확인해보세요!</string>

    <!-- 대화하기 - 채팅 페이지 -->
    <string name="text_chat_title">대화하기</string>
    <string name="hint_chat">내용을 입력하세요</string>

    <!-- 마이페이지 -->
    <string name="text_change_nickname">닉네임 변경하기</string>
    <string name="text_load_diary">일기 가져오기</string>
    <string name="text_app_guide">이용 가이드</string>
    <string name="text_withdraw">회원 탈퇴</string>
    <string name="text_email">제작자 이메일\nmjusw2024@gmail.com</string>

    <!-- fcm 알림 페이지 -->
    <string name="text_fcm_title">알림</string>

</resources>