<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_emotion_loading_text"
            style="@style/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="280dp"
            android:text="@string/text_add_diary_emotion_loading"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_warning1"
            style="@style/home_diary_text_regular_12px"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/text_warning1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_emotion_loading_text" />

        <TextView
            android:id="@+id/tv_warning2"
            style="@style/home_diary_text_regular_12px"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/text_warning2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_warning1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@null"
            android:src="@drawable/illus_statistics_cat"

            app:layout_constraintDimensionRatio="1:0.59375"
            app:layout_constraintTop_toBottomOf="@id/tv_warning2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>