<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".MainActivity">

            <Toolbar
                android:id="@+id/tb_select_diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentInsetStart="0dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/ib_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_arrow" />

                <TextView
                    style="@style/heading4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_select_diary_title"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/ib_search"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:background="@color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_search" />
            </Toolbar>

            <ImageButton
                android:id="@+id/ib_previous_month"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:src="@drawable/ic_left"
                app:layout_constraintBottom_toBottomOf="@id/tv_current_month"
                app:layout_constraintEnd_toStartOf="@id/tv_current_month"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_current_month" />

            <TextView
                android:id="@+id/tv_current_month"
                style="@style/heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/ib_next_month"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/ib_previous_month"
                app:layout_constraintTop_toBottomOf="@id/tb_select_diary"
                tools:text="July 2024" />

            <ImageButton
                android:id="@+id/ib_next_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:src="@drawable/ic_right"
                app:layout_constraintBottom_toBottomOf="@id/tv_current_month"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_current_month"
                app:layout_constraintTop_toTopOf="@id/tv_current_month" />

            <LinearLayout
                android:id="@+id/ll_week_container"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="20dp"

                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/vp_calendar_month"
                app:layout_constraintTop_toBottomOf="@id/tv_current_month">

                <TextView
                    style="@style/weekdays_bold_10px"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_week_sunday"
                    android:textColor="@color/red" />

                <TextView
                    style="@style/weekdays_bold_10px"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_week_monday"
                    android:textColor="@color/gray2" />

                <TextView
                    style="@style/weekdays_bold_10px"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_week_tuesday"
                    android:textColor="@color/gray2" />

                <TextView
                    style="@style/weekdays_bold_10px"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_week_wednesday"
                    android:textColor="@color/gray2" />

                <TextView
                    style="@style/weekdays_bold_10px"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_week_thursday"
                    android:textColor="@color/gray2" />

                <TextView
                    style="@style/weekdays_bold_10px"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_week_friday"
                    android:textColor="@color/gray2" />

                <TextView
                    style="@style/weekdays_bold_10px"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_week_saturday"
                    android:textColor="@color/skyblue" />
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_calendar_month"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                app:layout_constraintTop_toBottomOf="@id/ll_week_container" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="28dp"
                android:background="@color/gray2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_calendar_month" />

            <ImageView
                android:id="@+id/iv_emotion_anger"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"

                android:contentDescription="@null"
                android:src="@drawable/img_anger"
                app:layout_constraintEnd_toStartOf="@id/iv_emotion_happiness"
                app:layout_constraintHorizontal_chainStyle="spread_inside"

                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <ImageView
                android:id="@+id/iv_emotion_happiness"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@null"
                android:src="@drawable/img_happiness"
                app:layout_constraintBottom_toBottomOf="@id/iv_emotion_anger"
                app:layout_constraintEnd_toStartOf="@id/iv_emotion_boredom"

                app:layout_constraintStart_toEndOf="@id/iv_emotion_anger"
                app:layout_constraintTop_toTopOf="@id/iv_emotion_anger" />

            <ImageView
                android:id="@+id/iv_emotion_boredom"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@null"
                android:src="@drawable/img_boredom"
                app:layout_constraintBottom_toBottomOf="@id/iv_emotion_anger"
                app:layout_constraintEnd_toStartOf="@id/iv_emotion_sadness"

                app:layout_constraintStart_toEndOf="@id/iv_emotion_happiness"
                app:layout_constraintTop_toTopOf="@id/iv_emotion_anger" />

            <ImageView
                android:id="@+id/iv_emotion_sadness"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@null"
                android:src="@drawable/img_sadness"
                app:layout_constraintBottom_toBottomOf="@id/iv_emotion_anger"
                app:layout_constraintEnd_toStartOf="@id/iv_emotion_anxiety"

                app:layout_constraintStart_toEndOf="@id/iv_emotion_boredom"
                app:layout_constraintTop_toTopOf="@id/iv_emotion_anger" />

            <ImageView
                android:id="@+id/iv_emotion_anxiety"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@null"
                android:src="@drawable/img_anxiety"
                app:layout_constraintBottom_toBottomOf="@id/iv_emotion_anger"
                app:layout_constraintEnd_toEndOf="@id/divider"

                app:layout_constraintStart_toEndOf="@id/iv_emotion_sadness"
                app:layout_constraintTop_toTopOf="@id/iv_emotion_anger" />

            <ImageView
                android:id="@+id/iv_illus_statistics_cat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"

                android:contentDescription="@null"
                android:src="@drawable/illus_statistics_cat"
                app:layout_constraintDimensionRatio="1:0.59375"

                app:layout_constraintTop_toBottomOf="@id/iv_emotion_anger" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_move_statistics"
                style="@style/button_bold_16px"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/shape_radius_50_with_stroke"
                android:stateListAnimator="@null"
                android:text="@string/text_move_statistics"

                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_illus_statistics_cat" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>