<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:fontFamily="@font/pretendard_medium"
            android:text="lilili 님"
            android:textColor="@color/black"
            android:textSize="24sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_diary_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="일기 작성 nn일 째"
            android:textColor="@color/gray1"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"

            android:background="@drawable/shape_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_diary_day" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:background="#A4A4A4"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <TextView
            android:id="@+id/tv_my_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_my_diary"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_1" />

        <ImageView
            android:id="@+id/iv_detail_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right"

            app:layout_constraintBottom_toBottomOf="@id/tv_my_diary"
            app:layout_constraintEnd_toEndOf="@id/divider_1"
            app:layout_constraintTop_toTopOf="@id/tv_my_diary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            app:layout_constraintTop_toBottomOf="@id/tv_my_diary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_diary"
            android:layout_width="0dp"
            android:layout_height="50dp"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_radius_50"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/pretendard_medium"

            android:text="@string/text_add_diary"
            android:textColor="@color/white"

            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_diary" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="#A4A4A4"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_diary" />

        <TextView
            android:id="@+id/tv_talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:text="@string/text_talk"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/tv_my_diary"
            app:layout_constraintTop_toBottomOf="@id/divider_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_talk"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/shape_radius_50"
            android:backgroundTint="@color/black"

            android:fontFamily="@font/pretendard_medium"
            android:text="@string/text_talk"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_add_diary"
            app:layout_constraintStart_toStartOf="@id/btn_add_diary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>